fix flickering in safari

--- a/frameworks/themes/JewelTheme/src/main/resources/defaults.css
+++ b/frameworks/themes/JewelTheme/src/main/resources/defaults.css
@@ -391,7 +391,7 @@ j|Alert {
   border-radius: 50%;
 }
 .jewel.slider input:active::-webkit-slider-thumb, .jewel.slider input:active::-moz-range-thumb {
-  transform: scale(1.5);
+  transform: scale(1.4);
 }
 .jewel.slider input:focus {
   outline: none;
@@ -419,7 +419,7 @@ j|Alert {
   position: absolute;
   display: flex;
   overflow: hidden;
-  transform: translate(0, -2px);
+  transform: translate(0, -2.5px);
   margin: 0 29px;
   padding: 0;
   top: 50%;
